# key2joy

./: .gitignore  README.md  example_preset.yaml  flake.nix  pyproject.toml
nix/: default.nix
src/: key2joy.py
